@@ -170,6 +170,13 @@
 
 [2022-03-08]
 - Added Gooey Ghoul Drool to the loot table of Decaying Ghoul for the quest You Can Run, But You Can't Hide and Silver Lining.
+- Added Scourge Scrap Metal to the loot table of Vargul Deathwaker for the quest Making Something Out Of Nothing.
+- Added Scourge Scrap Metal to the loot table of Vargul Runelord for the quest Making Something Out Of Nothing.
+- Added Scourge Scrap Metal to the loot table of Vargul Slayer for the quest Making Something Out Of Nothing.
+- Added Scourge Scrap Metal to the loot table of Vargul Blighthound for the quest Making Something Out Of Nothing.
+- Added Basilisk Crystals to the loot table of Lurking Basilisk for the quest Gluttonous Lurkers.
 - Changed flags of Gooey Ghoul Drool to allow every member of a group to loot it.
+- Changed flags of Scourge Scrap Metal to allow every member of a group to loot it.
+- Changed flags of Basilisk Crystals to allow every member of a group to loot it.
 
 - Changed the respawn of Harvested Blight Crystal.
